# openGL-engine

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build.sh  conanfile.txt  format.sh  main.cpp
.claude/commands/: research-task.md
src/: main.cpp
src/classes/: SingletonManager.cpp  SingletonManager.h
src/classes/VirtualObjects/: CameraActor.cpp  CameraActor.h  SceneOrigin.cpp  SceneOrigin.h  TestObject.cpp  TestObject.h
src/classes/engine/: CameraModel.cpp  CameraModel.h  DebugModel.h  EngineManager.cpp  EngineManager.h  FileLoading.h  GameInterface.cpp  GameInterface.h  LightingHelper.h  ObjectHelper.h  RenderManager.cpp  RenderManager.h  ShaderLoader.cpp  UserEventManager.cpp  UserEventManager.h  VirtualObject.cpp  VirtualObject.h  WindowEventCallbackHelper.cpp  WindowEventCallbackHelper.h  WindowManager.cpp  WindowManager.h  loadShader.cpp  loadShader.h
src/classes/engine/ActorHandler/: BasicActor.h  BasicNode.cpp  BasicNode.h  GeometryHandler.h  TransformHandler.h
src/classes/engine/NodeComponents/: BasicNode.cpp  BasicNode.h  CameraComponent.cpp  CameraComponent.h  GeometryComponent.h  TransformComponent.h
src/classes/engine/rendering/: LightingPoints.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderPoints.h  UboBlock.h
src/classes/engine/uiElements/: DebugUiWindow.cpp  DebugUiWindow.h  UiElement.cpp  UiElement.h
src/classes/helper/: DebugUtils.h  FileLoading.h  FileLoadingUtils.h  LightingHelper.h  MathUtils.h  ObjectData.h  RenderUtils.cpp  RenderUtils.h  TriDataDef.h  VertexIndexingHelper.h  VertexIndexingUtils.h
src/classes/helper/enums/: EngineDrawEventsEnum.h  LifecycleEventsEnum.h
src/classes/nodeComponents/: BasicNode.cpp  BasicNode.h  CameraComponent.cpp  CameraComponent.h  GeometryComponent.h  TransformComponent.cpp  TransformComponent.h  UiDebugWindow.cpp  UiDebugWindow.h
src/classes/objects/: SceneDebugWindow.cpp  grid.vert
src/classes/primitives/: DebugManagerWindow.cpp  DebugManagerWindow.h  PerformanceDebugWindow.cpp  PerformanceDebugWindow.h  SceneDebugWindow.cpp  SceneDebugWindow.h  SceneSettingsDebugWindow.cpp  SceneSettingsDebugWindow.h
src/classes/uiElements/: UiDebugWindow.h  UiElement.h  UiElementButton.h  UiElementCollapsableSection.h  UiElementColorEdit.h  UiElementPieChart.h  UiElementPlot.h  UiElementRadio.h  UiElementSeperator.h  UiElementSlider.h  UiElementText.h
src/customCode/engineTestScene/: SceneOrigin.cpp  SceneOrigin.h  TestObject.cpp  TestObject.h
src/customCode/mandelbrot/: MandelbrotScene.cpp  MandelbrotScene.h
src/customCode/mandelbrotScene/: MandelbrotDebugWindow.cpp  MandelbrotDebugWindow.h  MandelbrotSceneOrigin.cpp  MandelbrotSceneOrigin.h  MandelbrotUbo.cpp  MandelbrotUbo.h
src/customCode/testScene/: CameraActor.cpp  TestObject.cpp  TestSceneOrigin.cpp  TestSceneOrigin.h
src/customCode/waveFunctionCollapse/: CustomFieldTypeData.cpp  CustomFieldTypeData.h  Field.cpp  Field.h  FieldTile.cpp  FieldTile.h  FieldTypeUtils.h  IslandGenerator.cpp  IslandGenerator.h  TestSceneOrigin.cpp  TileTypeData.h  WafeFunctionCollapseGenerator.cpp  WafeFunctionCollapseGenerator.h  WafeFunctionCollapseSceneOrigin.cpp  WafeFunctionCollapseSceneOrigin.h
src/internal/classes/engine/: DebugModel.h  EngineManager.cpp  EngineManager.h  GameInterface.cpp  GameInterface.h  PerformanceModel.h  UserEventManager.h  WindowEventCallbackHelper.h  WindowManager.cpp  WindowManager.h
src/internal/classes/helper/: FileLoadingUtils.h  ObjectData.h  RenderUtils.cpp  VertexIndexingUtils.h
src/internal/classes/nodeComponents/: BasicNode.cpp  BasicNode.h  (+10 more)
src/internal/utils/: EnableSharedFromBase.h  FileLoadingUtils.h  RenderUtils.h  StringFormat.h  TimeUtils.h  VertexIndexingUtils.h
src/resources/customCode/: CameraActor.cpp  CameraActor.h  SceneOrigin.cpp  TestObject.cpp
src/resources/shader/: ColorShader.cpp  ColorShader.h  GridShader.cpp  GridShader.h  MandelbrotShader.cpp  MandelbrotShader.h  SolidColorShader.cpp  SolidColorShader.h  SolidTextureShader.cpp  SolidTextureShader.h  TextureShader.cpp  TextureShader.h  color.frag  color.vert  grid.frag  grid.vert  mandelbrot.frag  mandelbrot.vert  simpleFragmentShader.frag  simpleVertexShader.vert  solidColor.frag  solidColor.vert  solidTexture.frag  solidTexture.vert  texture.frag  texture.vert
tests/: BasicNode_test.cpp  CMakeLists.txt
(+121 files in other folders)
